# lance-array

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  prepare-release.yml  release.yml
docs/: index.md
docs/api/: chunk_tiles.md  core.md
docs/blog/: random-access-learnings-2026-03.md
docs/stylesheets/: extra.css
lance_array/: __init__.py  core.py
prds/: lance-array-nd-arrays.md  lance-array-slice-writes.md
scripts/: __init__.py  create_benchmark_datasets.py  local_summary.txt  modal_app.py  render_benchmark_charts.py  run_benchmark.py  run_slice_scaling_benchmark.py  s3_summary.txt
scripts/lance_vs_zarr/: README.md  __init__.py  benchmark.py  chunk_tiles.py
tests/: conftest.py  test_lance_array_indexing.py  test_lance_array_open.py  test_lance_array_properties.py  test_lance_array_writes.py  test_normalize_chunk_slices.py  test_smoke.py  test_to_lance_validation_and_codecs.py
